[package]
name = "locityper"
authors = ["Timofey Prodanov <timofey.prodanov@hhu.de>", "Tobias Marschall <tobias.marschall@hhu.de>"]
version = "0.1.4-1"
edition = "2021"

[dependencies]
htslib = { package = "rust-htslib", version = "0.40", default-features = false }
nalgebra = { version = "0.31", default-features = false, features = ["std"] } # Possibly remove later.
statrs = { version = "0.16", default-features = false } # Possibly remove later.
nohash = { package = "nohash-hasher", version = "0.2.0", default-features = false, features = ["std"] }
json = { version = "0.12", default-features = false }
once_cell = { version = "1.17", default-features = false, features = ["std"] }
bio = { version = "1.1.0", default-features = false } # Remove later.
fern = { version = "0.6", default-features = false, features = ["colored"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = { version = "0.4", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
getrandom = { version = "0.2", default-features = false }
grb = { version = "1.3.0", default-features = false, optional = true }
highs = { version = "1.3.3", default-features = false, optional = true }
lexopt = { version = "0.3", default-features = false }
colored = { version = "2.0", default-features = false }
which = { version = "4.4", default-features = false }
regex = { version = "1.7", default-features = false, features = ["std", "perf"] }
lazy_static = { version = "1.4", default-features = false }
const_format = { version = "0.2.30", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
fnv = { version = "1", default-features = false, features = ["std"] }
smallvec = { version = "1", default-features = false }
kodama = { version = "0.3", default-features = false }
argmin = { version = "0.8", default-features = false }
argmin-math = { version = "0.3", default-features = false, features = ["vec"] }
# No default features => unsafe, but fast compression/decompression.
lz4 = { version = "1.24", default-features = false }

[build-dependencies]
bindgen = { version = "0.65", default-features = false, features = ["runtime"] }

# [profile.release]
# debug = 1  # Needed for profiling.

[features]
default = ["gurobi", "highs"]
gurobi = ["dep:grb"]
highs = ["dep:highs"]
devel = []