[package]
name = "locityper"
authors = ["Timofey Prodanov <timofey.prodanov@hhu.de>", "Tobias Marschall <tobias.marschall@hhu.de>"]
version = "0.18.1-0"
rust-version = "1.70"
edition = "2021"

[dependencies]
htslib = { package = "rust-htslib", version = "0.49", default-features = false }
nalgebra = { version = "0.33", default-features = false, features = ["std"] } # Possibly remove later.
statrs = { version = "0.18", default-features = false } # Possibly remove later.
nohash = { package = "nohash-hasher", version = "0.2.0", default-features = false, features = ["std"] }
json = { version = "0.12", default-features = false }
bio = { version = "2", default-features = false } # Remove later.
fern = { version = "0.7", default-features = false, features = ["colored"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = { version = "0.4", default-features = false }
rand = { version = "0.9", default-features = false, features = ["std", "alloc"] }
rand_xoshiro = { version = "0.7", default-features = false }
getrandom = { version = "0.3", default-features = false }
grb = { version = "2", default-features = false, optional = true }
# Force same version of highs-sys as highs.
highs-sys = { version = "=1.6.1", default-features = false, optional = true }
highs = { version = "=1.6.1", default-features = false, optional = true }
lexopt = { version = "0.3", default-features = false }
colored = { version = "3", default-features = false }
which = { version = "7", default-features = false }
regex = { version = "1.10", default-features = false, features = ["std", "perf"] }
fancy-regex = { version = "0.14", default-features = false, features = ["std", "unicode", "perf"] }
# Later: replace lazy_static with std::sync::LazyLock (since rust 1.80.0).
lazy_static = { version = "1.4", default-features = false }
const_format = { version = "0.2", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
smallvec = { version = "1", default-features = false }
argmin = { version = "0.10", default-features = false }
argmin-math = { version = "0.4", default-features = false, features = ["vec"] }
lz4 = { version = "1.26", default-features = false }
wyhash = { version = "0.5", default-features = false }
num-traits = { version = "0.2", default-features = false }
varint-rs = { version = "2.2", default-features = false, features = ["std"] }
base64ct = { version = "1.6", default-features = false }
glob = { version = "0.3", default-features = false }

[build-dependencies]
bindgen = { version = "0.70", default-features = false, features = ["runtime"], optional = true }

# [profile.release]
# debug = 1  # Needed for profiling.

[features]
default = ["align"]
gurobi = ["dep:grb"]
highs = ["dep:highs", "dep:highs-sys"]
align = ["dep:bindgen"]
